// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be invalid for bad cron 1`] = `
{
  "cron": "yup:string.cron",
}
`;

exports[`should be invalid for bad region 1`] = `
{
  "regions": [
    {
      "id": {
        "key": "yup:string.uuid",
        "options": {
          "path": "regions[0].id",
        },
      },
    },
  ],
}
`;

exports[`should be invalid for bad url 1`] = `
{
  "url": {
    "key": "yup:string.url",
    "options": {
      "path": "url",
    },
  },
}
`;

exports[`should be invalid for bad uuid 1`] = `
{
  "id": {
    "key": "yup:string.uuid",
    "options": {
      "path": "id",
    },
  },
}
`;

exports[`should be invalid for empty name 1`] = `
{
  "name": "yup:mixed.required",
}
`;

exports[`should be invalid for empty script 1`] = `
{
  "script": {
    "key": "yup:string.min",
    "options": {
      "min": 1,
      "path": "script",
    },
  },
}
`;

exports[`should be invalid for extra fields 1`] = `
{
  "": {
    "key": "yup:object.noUnknown",
    "options": {
      "path": "this",
    },
  },
}
`;

exports[`should be invalid for some bad regions legacy snapshot 1`] = `
{
  "regions": [
    {
      "id": {
        "key": "yup:string.uuid",
        "options": {
          "path": "regions[0].id",
        },
      },
    },
    ,
    {
      "id": {
        "key": "yup:string.uuid",
        "options": {
          "path": "regions[2].id",
        },
      },
    },
  ],
}
`;
